--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -17,3 +17,8 @@ services:
       - MONGO_PASSWORD=naqib123
       - SESSION_SECRET=secret
     command: npm run dev
+
+  mongo:
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=naqib
+      - MONGO_INITDB_ROOT_PASSWORD=naqib123
