--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,7 +8,7 @@ services:
       replicas: 8
       restart_policy:
         condition: any
-      update_policy:
+      update_config:
         parallelism: 2
         delay: 15s
     build: 
